fixed the location of the scrollbar

--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -107,10 +107,13 @@ button:active {
   background-color: #171717;
 }
 
+#students {
+  overflow-y: hidden;
+}
+
 #students #absent {
     margin-left: 160px;
     background-color: #1f1f1f;
-    overflow-y: hidden;
 }
 
 .addstudent {
